<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="onCancelClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="onOkClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_20"
        android:paddingVertical="@dimen/padding_8"
        tools:context=".ui.dialog.ChangeTeamNameDialogFragment">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="340dp"
            android:textColor="@android:color/black"
            android:text="@string/team_new_name"
            android:textSize="@dimen/textHeaderSize"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="@dimen/padding_12"
            android:layout_marginBottom="@dimen/padding_28"
            app:layout_constraintBottom_toTopOf="@id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_12"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="@{(v) -> onCancelClickListener.onClick(v)}"
            android:padding="@dimen/padding_8"
            android:text="@string/alert_dialog_cancel"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonOk"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewErrorMessage" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="@{(v) -> onOkClickListener.onClick(v)}"
            android:padding="@dimen/padding_8"
            android:text="@string/ok"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toTopOf="@+id/buttonCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>